--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-sushi",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ryhu.github.io/react-sushi/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
@@ -18,6 +19,7 @@
   },
   "scripts": {
     "start": "set PORT=3001 && react-scripts start",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -36,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
